--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -4,22 +4,22 @@
 <meta charset=utf-8 >
 <title>TooToo4 Library Library</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view files on Ladybug Tools with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-05-29' >
+<meta name=date content='2017-06-08' >
 
-<link rel=stylesheet href=../dev/style4.css >
+<link rel=stylesheet href=js/style.css >
 
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 
-<script src=../dev/tootoo4.js ></script>
-<script src=../dev/menu4.js ></script>
-<script src=../dev/select-users4.js ></script>
-<script src=../dev/contents4.js ></script>
-<script src=../dev/html.js ></script>
+<script src=js/tootoo4.js ></script>
+<script src=js/menu4.js ></script>
+<script src=js/select-users4.js ></script>
+<script src=js/contents4.js ></script>
+<script src=js/html.js ></script>
 
 <!--
 	<div id=container >
