--- a/tootoo/r5/dev/tootoo5-basic.html
+++ b/tootoo/r5/dev/tootoo5-basic.html
@@ -67,6 +67,16 @@
 
 	}
 
+
+	var user = {
+
+		user: 'ladybug-tools',
+		repo: 'butterfly',
+		branch: 'master',
+		path: '',
+
+	}
+
 	var tree = 'https://api.github.com/repos/' + user.user + '/' + user.repo + '/git/trees/master?recursive=1';
 //	var urlBase = 'https://rawgit.com/mrdoob/three.js/dev/';
 	var urlBase = 'https://' + user.user + '.github.io/' + user.repo + '/';
