tootoo ladybug library

--- a/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
+++ b/tootoo/r4/library-ladybug/tootoo4-library-ladybug.html
@@ -2,20 +2,20 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo4 Library Library</title>
+<title>TooToo4 Ladybug Library</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on Ladybug Tools with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-06-08' >
+<meta name=date content='2017-06-11' >
 <link rel=stylesheet href=js/style.css >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script src=js/tootoo4.js ></script>
-<script src=js/menu4.js ></script>
-<script src=js/select-users4.js ></script>
+<script src=js/menu5.js ></script>
+<script src=js/select-users5.js ></script>
 <script src=js/contents4.js ></script>
-<script src=js/html.js ></script>
+<script src=js/html2.js ></script>
 <script>
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
@@ -31,7 +31,17 @@
 		container.id = 'container';
 		container.innerHTML = basicHTML;
 
+		let tagLine;
+
+		mnuHelp.href = 'https://github.com/pushme-pullyou';
+
+		tagLine = document.head.querySelector( "[name=description]" ).content;
+
+		mnuTitle.innerHTML = 'Ladybug Tools View';
+		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
+
 		SEL.initSelectRepos();
+		SEL.initSelectType();
 
 	}
 
