updadte lb JavaScript

--- a/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html
+++ b/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html
@@ -78,6 +78,16 @@ var event;
 
 	function onHashChange() {
 
+		if ( user.defaultFile !== undefined ) {
+
+			CON.getFileSetContents( user.defaultFile );
+
+		} else {
+
+			CON.getFileSetContents( location.hash.slice( 1 ) );
+
+		}
+
 		CON.getFileSetContents( location.hash.slice( 1 ) );
 		CON.setButtons( location.hash.slice( 1 ) );
 		SEL.highlightMenuItem();
