--- a/index.html
+++ b/index.html
@@ -2,27 +2,13 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo4 Basic</title>
+<title>@TITLE@</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='@DESCRIPTION@' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-30 16:28' >
+<meta name=date content='2017-6-14' >
 
-<!--
-
-TooToo Read Me
-===
-
-TooToo is a JavaScript app that helps you browse through GitHub repositories and read or access data in files really quickly and easily.
-
-It's part of the Pushme-Pullyou collection of JavaScript files: https://pushme-pullyou.github.io/
-
-This Read Me is embedded in every TooToo All-in-One script. For details see the main TooToo Read Me:/ https://pushme-pullyou.github.io/tootoo/
-
-Copyright © 2017 Pushme Pullyou authors. MIT License.
-
--->
 <style>
 
 html, body { font: 12pt monospace; height: 100%; margin: 0;  overflow: hidden; }
@@ -57,7 +43,7 @@ summary h3 { display: inline; }
 #divMD {border: 0px orange solid; margin: 0 auto; max-width: 800px; overflow-x: hidden; position: adsolute; }
 
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
-#hamburger h2, #menuItems h2, #menuItems h4 {margin: 0; }
+#hamburger h2, #menuItems h2, #menuItems h4 { margin: 0; }
 
 #ifr { /* border: 0px yellow solid; */ height: 500px; width: 100%; }
 #ifrHTML { border: 0px yellow solid; margin: 0 8%; height: 100%; padding: 0; width: 100%; }
@@ -67,17 +53,11 @@ summary h3 { display: inline; }
 #menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }
 
 
-
-
 </style>
-
-
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script>
-// ../dev/tootoo4.js inserted
-
 	let TOO = {};
 
 	const b = '<br>';
@@ -85,6 +65,8 @@ summary h3 { display: inline; }
 
 
 	TOO.initUser = function() {
+
+// if not, then overwrites. Fix this!
 
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
@@ -94,9 +76,11 @@ summary h3 { display: inline; }
 
 		window.addEventListener ( 'hashchange', TOO.onHashChange, false );
 
-		if ( location.protocol === 'bbb file:' ) {
+		if ( location.protocol === 'vvvfile:' ) { // can help with local testing. Needs work.
 
-			TOO.urlGHPages = './';
+			pathFull1 = user.path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/';
+			pathFull = pathFull1 === '/' ? './' : pathFull1;
+			TOO.urlGHPages = pathFull;
 
 		} else if ( user.rawgit ) {
 
@@ -117,7 +101,7 @@ summary h3 { display: inline; }
 		MNU.init();
 
 		TOO.setMenu = MNU.tableOfContents !== undefined ? TOO.setMenuContents : TOO.setMenuDefault;
-		TOO.setMenu( user.folder );
+		TOO.setMenu( user.path );
 
 	}
 
@@ -130,7 +114,7 @@ summary h3 { display: inline; }
 		TOO.path = path;
 
 		url = 'https://api.github.com/repos/' + user.user + '/' + user.repo + '/contents/' + ( path ? path : '' );
-
+//console.log( 'url', url );
 		menuTitle.innerHTML = 'All Files';
 		TOO.setBreadcrumbs( path );
 
@@ -173,7 +157,7 @@ summary h3 { display: inline; }
 			if ( item.type === 'file' ) {
 
 				menuItems.innerHTML +=
-					'<a id=file' + count++ + ' href=#' + item.path + ' style=width:100%;  > ' + item.name + '</a>' + b +
+					'<a id=file' + count++ + ' href=#' + encodeURI( item.path ) + ' style=width:100%;  > ' + item.name + '</a>' + b +
 				'';
 
 				TOO.files.push( item.path );
@@ -190,7 +174,7 @@ summary h3 { display: inline; }
 
 			CON.getFileSetContents( location.hash.slice( 1 ) );
 
-		} else if ( user.defaultFile !== undefined && user.folder === TOO.path ) {
+		} else if ( user.defaultFile !== undefined && user.path === TOO.path ) {
 
 			CON.getFileSetContents( user.defaultFile );
 
@@ -250,7 +234,7 @@ summary h3 { display: inline; }
 
 			CON.getFileSetContents( location.hash.slice( 1 )  );
 
-//		} else if ( user.defaultFile !== undefined && user.folder === TOO.path ) {
+//		} else if ( user.defaultFile !== undefined && user.path === TOO.path ) {
 		} else if ( user.defaultFile !== undefined ) {
 
 			CON.getFileSetContents( user.defaultFile );
@@ -295,7 +279,7 @@ summary h3 { display: inline; }
 
 		name = user.repo;
 
-		name = user.folder ? user.folder : user.repo;
+//		name = user.path ? user.path : user.repo;
 
 		txt = '<h3><a href=JavaScript:TOO.setMenuDefault(); >' + name + '</a> &raquo; </h3>';
 
@@ -368,9 +352,8 @@ summary h3 { display: inline; }
 
 	};
 
-	TOO.requestFile = function ( fileName, callback ) {
 
-		var fileName, text, lines;
+	TOO.requestFile = function ( fileName, callback ) {
 
 		xhr = new XMLHttpRequest();
 		xhr.crossOrigin = 'anonymous';
@@ -380,10 +363,6 @@ summary h3 { display: inline; }
 		xhr.send( null );
 
 	}
-
-</script>
-<script>
-// ../dev/menu4.js inserted
 
 
 	let MNU = {};
@@ -521,10 +500,6 @@ summary h3 { display: inline; }
 
 
 
-</script>
-<script>
-// ../dev/contents4.js inserted
-
 
 	let CON = {};
 
@@ -554,7 +529,7 @@ summary h3 { display: inline; }
 
 			CON.getFileHTML( url );
 
-		} else if ( u.endsWith( '.gif' ) || u.endsWith( '.ico' ) || u.endsWith( '.jpg' ) || u.endsWith( '.png' ) ||  u.endsWith( '.svg' ) ) {
+		} else if ( u.endsWith( '.gif' ) || u.endsWith( '.ico' ) || u.endsWith( '.jpg' ) || u.endsWith( '.jpeg' ) || u.endsWith( '.png' ) ||  u.endsWith( '.svg' ) ) {
 
 			CON.getFileImage( url );
 
@@ -567,7 +542,7 @@ summary h3 { display: inline; }
 		CON.setHighlightAndButtons( path );
 
 		location.hash = path;
-		menu.scrollTop = 0;
+//		menu.scrollTop = 0;
 
 	}
 
@@ -608,7 +583,7 @@ summary h3 { display: inline; }
 
 			if ( response.includes( 'DOCTYPE') ) {
 
-console.log( '', response  );
+// console.log( '', response  );
 
 				contents.innerHTML = '<h1 style=text-align:center; >file not found</h1>';
 
@@ -791,65 +766,18 @@ console.log( '', response  );
 		}
 
 	}
-</script>
-<!--
-<script src=../dev-repo/repo-prediqtiv.js ></script>
--->
-<script>
-// repo-pushme-pullyou.js inserted
+
+let basicHTML =
 
 
-	var user = {
-		user : 'pushme-pullyou',
-		tagLine : 'Browse & view stuff on GitHub real fast!',
-		subText : 'Browse & view stuff on GitHub real fast!',
-		repo : 'pushme-pullyou.github.io',
-		branch : 'master',
-		path : '',
-		title : 'PushMe PullYou',
-	};
-
-
-	MNU.tableOfContents =
-`### Pushme-Pullyou
-* [Read Me]( #README.md )
-### GubGub
-* [Read Me]( #gubgub/README.md )
-### DabDab
-* [Read Me]( #dabdab/README.md )
-### TooToo
-* [TooToo Read Me]( #tootoo/README.md )
-#### TooToo Versions
-* [Dev Read Me]( #tootoo/r3/dev/README.md )
-* [Library Read Me]( #tootoo/r4/library/README.md )
-* [Skim Read Me]( #tootoo/r4/skim/README.md )
-#### TooToo Utilities
-* [Utilities Read Me]( #tootoo/r4/utilities/README.md )
-* [get-github-dir-names]( #tootoo/r4/utilities/get-github-dir-names/README.md )
-* [Make Read Me Read Me]( #tootoo/r4/utilities/make-github-readme/README.md )
-* [Merge Files into one]( #tootoo/r4/utilities/merge-files-into-one/README.md )
-
-`;
-
-
-	CON.massageText = function( response ){
-
-		CON.converter = new showdown.Converter();
-		text = CON.converter.makeHtml( response );
-
-		return text;
-
-	};
-</script>
-
-	<div id=container >
-
-		<div id=menu >
+`		<div id=menu >
 
 			<h2>
-				<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
+<!--
+					<a href=http://pushme-pullyou.github.io title="pushMe pullYou - your Github repo happy place" > &#x2766 </a><br>
+-->
 				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				~ <a href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
+				<a id=mnuHelp href=https://github.com/pushme-pullyou onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
 			</h2>
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
@@ -876,10 +804,55 @@ console.log( '', response  );
 		<div id=butNextFile >&gt;</div>
 		<div id=butPreviousFile >&lt;</div>
 
+`;
 
-	</div>
+	var user = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
+		path : '',
 
-<script >
+
+//		infoLink : '''
+		tagLine : 'Browse & view stuff on GitHub real fast!',
+		subText : 'Browse & view stuff on GitHub real fast!',
+		title : 'PushMe PullYou',
+	};
+
+
+	MNU.tableOfContents =
+`### Pushme-Pullyou
+* [Read Me]( #README.md )
+### GubGub
+* [Read Me]( #gubgub/README.md )
+### DabDab
+* [Read Me]( #dabdab/README.md )
+### TooToo
+* [TooToo Read Me]( #tootoo/README.md )
+#### TooToo 4
+* [Dev Read Me]( #tootoo/r3/dev/README.md )
+* [Library Read Me]( #tootoo/r4/library/README.md )
+* [Skim Read Me]( #tootoo/r4/skim/README.md )
+### TooToo 5
+* [Ladybug Tools View Read Me ]( tootoo/r5/ladybug-tools-view/README.md )
+* &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
+#### TooToo Utilities
+* [Utilities Read Me]( #tootoo/r4/utilities/README.md )
+* [get-github-dir-names]( #tootoo/r4/utilities/get-github-dir-names/README.md )
+* [Make Read Me Read Me]( #tootoo/r4/utilities/make-github-readme/README.md )
+* [Merge Files into one]( #tootoo/r4/utilities/merge-files-into-one/README.md )
+
+`;
+
+
+	CON.massageText = function( response ){
+
+		CON.converter = new showdown.Converter();
+		text = CON.converter.makeHtml( response );
+
+		return text;
+
+	};
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
@@ -887,9 +860,16 @@ console.log( '', response  );
 
 	function init() {
 
+		container = document.body.appendChild( document.createElement( 'div' ) );
+		container.id = 'container';
+		container.innerHTML = basicHTML;
+
 		let tagLine;
 
+		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
+
 		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
+
 		mnuTitle.innerHTML = user.title ? user.title : user.user;
 		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
 
