--- a/tootoo/r5/anywhere/anywhere-r1.html
+++ b/tootoo/r5/anywhere/anywhere-r1.html
@@ -20,7 +20,7 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	protocol = location.protocol;
+	let protocol = location.protocol;
 
 	if ( protocol === 'file:' ) {
 
