--- a/tootoo/r5/anywhere/merge-anywhere-into-one-r1.html
+++ b/tootoo/r5/anywhere/merge-anywhere-into-one-r1.html
@@ -10,33 +10,24 @@
 </head>
 <body>
 <script>
-// Copyright 2017 Jaanga authors ~ MIT license
+// Copyright 2017 pusheMe puulYou authors ~ MIT license
 
-	var title, fileNameHtm, fileNameCss;
-
-	fileNameHtm = '../../dev/tootoo4-basic.html';
-	fileTitle = 'tootoo3-all-in-one.html';
-
-
-	fileNameCss = '../../dev/style4.css';
-//	fileNameCss = '../examples/css-prediqtiv.js';
 
 var date = new Date();
 var string = date.getFullYear() + '-' + ( date.getMonth() + 1 ) + '-' + date.getDate();
 
 
 var header =
+
 `<!doctype html>
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>@TITLE@<\/title>
+<title>TooToo Anywhere R1</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='@DESCRIPTION@' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-
 <meta name=date content='` + string + `' >
-
 <style>
 `;
 
@@ -53,26 +44,99 @@ var footer =
 `
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
+	protocol = location.protocol;
+
+	if ( protocol === 'file:' ) {
+
+		if ( location.pathname.includes( 'github.io' ) ) {
+
+			firstDot = location.pathname.indexOf( 'github.io' );
+			user = location.pathname.slice( 0, firstDot - 1 );
+			user = user.slice( user.lastIndexOf( '/' ) + 1 );
+			repo = user + '.github.io';
+
+			path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+
+		} else if ( location.pathname.includes( 'github.com' ) ) {
+
+			firstDot = location.pathname.indexOf( 'github.com' );
+			user = location.pathname.slice( 0, firstDot - 1 );
+			user = user.slice( user.lastIndexOf( '/' ) + 1 );
+			repo = user + '.github.com';
+			path = location.pathname.slice( firstDot + 11, location.pathname.lastIndexOf( '/' )  );
+		}
+
+	} else if ( protocol.includes( 'http' ) ) {
+
+		firstDot = location.hostname.indexOf( '.github.io' );
+		user = location.hostname.slice( 0, firstDot );
+		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
+
+	}
+
+	var user = {
+
+		user: user,
+		repo: repo,
+		branch: 'master',
+		path: path,
+
+	}
+
+
+	const b = '<br>';
+
 	init();
 
 	function init() {
+
+		let tagLine;
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
 		container.innerHTML = basicHTML;
 
-		let tagLine;
+		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
-		mnuHelp.href = user.help ? user.help : 'https://github.com/pushme-pullyou';
+		window.addEventListener( 'resize', setContentsWidth, false );
 
-		tagLine = user.tagLine ? user.tagLine : document.head.querySelector( "[name=description]" ).content;
+		setContentsWidth();
 
-		mnuTitle.innerHTML = user.title ? user.title : user.user;
+		window.addEventListener ( 'hashchange', onHashChange, false );
+
+		tagLine = document.head.querySelector( "[name=description]" ).content;
+		mnuTitle.innerHTML = document.title;
 		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
+		mnuHelp.href = 'https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/';
 
-		TOO.initUser();
+		MNU.init();
+
+		CON.initContents();
+		SEL.initSelectType();
+
+		mnuUserTitle.innerHTML = '<h3>User: ' + user.user + '</h3>';
+		mnuUserTagline.innerHTML = 'Repo: ' + user.repo;
+
+		SEL.selectMenuType();
 
 	}
+
+
+	function onHashChange() {
+
+		CON.getFileSetContents( location.hash.slice( 1 ) );
+		CON.setButtons( location.hash.slice( 1 ) );
+		SEL.highlightMenuItem();
+
+	}
+
+
+	function setContentsWidth() {
+
+		contents.style.width = ( window.innerWidth - 325 ) + 'px';
+
+	}
+
 
 <\/script>
 <\/body>
@@ -81,11 +145,11 @@ var footer =
 
 	files = [
 
-		'../../dev/style4.css',
-		'../../dev/tootoo4.js',
-		'../../dev/menu4.js',
-		'../../dev/contents4.js',
-		'../../dev/html.js',
+		'../js-dev/style.css',
+		'../js-dev/html.js',
+		'../js-dev/menu.js',
+		'../js-dev/contents.js',
+		'../js-dev/sel-select-menu-type.js',
 
 	];
 
@@ -144,7 +208,7 @@ var footer =
 				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
 				'<p>' +
-					'<select id=selFile onchange=selectFile(); title="Select file" size=15 style=width:100%; ></select>' +
+//					'<select id=selFile onchange=selectFile(); title="Select file" size=15 style=width:100%; ></select>' +
 				'</p>' +
 
 
@@ -174,47 +238,11 @@ var footer =
 
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
-		getMenuSelectUserOptions();
-
-
-	}
-
-
-
-	function getMenuSelectUserOptions() {
-
-		let user;
-
-		var folderName = 'https://api.github.com/repos/pushme-pullyou/pushme-pullyou.github.io/contents/tootoo/r4/dev-repo/';
-
-		requestFile( folderName, callbackFiles );
-
-	}
-
-
-	function callbackFiles( xhr ){
-
-		var files = xhr.target.response;
-
-		files = JSON.parse( files );
-
-		for ( let i = 0; i < files.length; i++) {
-
-			file = files[ i ].name;
-
-			if ( file.endsWith( '.js') ) {
-
-				selFile.innerHTML += '<option>' + file + '</option>';
-
-			}
-
-		 }
-
-		selFile.selectedIndex = 8;
-
 		selectFile();
 
+
 	}
+
 
 
 	var txt = '';
@@ -222,7 +250,7 @@ var footer =
 
 	function selectFile() {
 
-		contents.value = '';
+		contents.value = 'bbbbbbbbb';
 		txt = '';
 
 		for ( var i = 0; i < files.length; i++ ) {
@@ -231,28 +259,19 @@ var footer =
 
 		}
 
-		requestFile( '../../dev-repo/' + selFile.value, callback, files.length );
+/*		requestFile( '../../dev-repo/' + selFile.value, callback, files.length );
 
 		if ( !scr ) {
 			scr = document.body.appendChild( document.createElement( 'script' ) );
 			scr.onload = scrOnload;
 		}
-
-	}
-
-
-	function scrOnload() {
-
-console.log( 'user', user.title );
-
-		contents.value = contents.value.replace( /@TITLE@/, user.title );
-		contents.value = contents.value.replace( /@DESCRIPTION@/, user.tagLine );
+*/
 	}
 
 
 
 	function callback( xhr, index  ) {
-
+console.log( '', index );
 		if ( index === 0 ) {
 
 			txt += header +
@@ -265,14 +284,14 @@ console.log( 'user', user.title );
 
 		}
 
-		if ( index === files.length ){
+		if ( index === files.length - 1 ){
 
 			contents.value = txt + footer;
 
 			MNU = {};
 			CON = {};
 
-			scr.src = '../../dev-repo/' + selFile.value;
+//			scr.src = '../../dev-repo/' + selFile.value;
 
 		}
 
@@ -302,7 +321,7 @@ console.log( 'user', user.title );
 		blob = new Blob( [ contents.value ] );
 		a = document.body.appendChild( document.createElement( 'a' ) );
 		a.href = window.URL.createObjectURL( blob );
-		a.download = selFile.value.replace( 'repo-', 'tootoo4-all-in-one-' ).replace( '.js', '.html' );
+		a.download = 'tootoo-anywhere-in-one-r1.html';
 		a.click();
 		a = null;
 
