--- a/tootoo/r5/best-websites/best-websites-r1.html
+++ b/tootoo/r5/best-websites/best-websites-r1.html
@@ -98,7 +98,7 @@ summary h3 { display: inline; }
 	var doc, links, linksInText;
 
 	var win  = window.open( 'https://sdmg15.github.io/Best-websites-a-programmer-should-visit/', '', 'left=400, top=150, width=800, height=600', true );
-	win.moveBy( -window.innerWidth,  0);
+	win.moveBy( -6000,  0 );
 	win.moveBy( 400, 0 );
 
 	var user = {
