--- a/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
+++ b/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo5 predIQtiv R1</title>
+<title>TooToo5 Succeed Study Supplement R1</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -20,21 +20,18 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	var images = 'https://prediqtiv.github.io/images/';
-
 	var user = {
 
-		user: 'prediqtiv',
-		repo: 'prediqtiv.github.io',
+		user: 'pushme-pullyou',
+		repo: 'pushme-pullyou.github.io',
 		branch: 'master',
-		path: '',
+		path: 'tootoo/r5/succeed-study-supplement/',
 
-		infoLink : 'https://github.com/prediqtiv/prediqtiv.github.io/',
-		logo: '<img src=' + images + 'five-boxes.png height=32 >',
-		tagLine : 'Invest smarter!',
-		subText : 'Invest smarter!',
-		title : '<img src=' + images + 'predIQtiv.png  height=64 >',
-		defaultFile : 'REAADME.md'
+		infoLink : 'https://github.com/pushme-pullyou/pushme-pullyou.github.io/',
+		tagLine : 'Browse & view stuff on PushMe PullYou real fast!',
+		subText : 'Browse & view stuff on PushMe PullYou real fast!',
+		title : 'PushMe PullYou',
+		defaultFile : 'dev-notes.md'
 	}
 
 
